--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="header-text">
-						<h2>Hello, I'm <span></span> Mikayla! <br> I create experiences that click.🖱️ <span></span> </h2>
+						<h2>Hello, I'm <span></span> Mikayla!<br> I create experiences that click.🖱️‧₊˚ ⋅ <span></span> </h2>
 
 						<!-- <p>UX DESIGNER</p> -->
 						<!-- <p id="typewriter">UX DESIGNER</p> -->
@@ -158,7 +158,7 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								Welcome to my digital sandbox! I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a UX research assistant at Spartie Lab.
+								Welcome to my digital sandbox!⛱️ I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a UX research assistant at Spartie Lab.
 
 
 							</h3>
