--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 							<i class="fa fa-bars"></i>
 						</button>
-						<a class="navbar-brand" href="index.html">Mikayla Slavin</a>
+						<a class="navbar-brand" href="index.html">Mikayla Slavin🍓</a>
 					</div><!--/.navbar-header-->
 					<!-- End Header Navigation -->
 
@@ -592,7 +592,7 @@
 						<div class="single-contact-box">
 							<div class="contact-adress">
 								<div class="contact-add-head">
-									<h3>Mikayla Slavin</h3>
+									<h3>Mikayla Slavin🍓</h3>
 									<p>UX Designer & Researcher</p>
 								</div>
 								<div class="contact-add-info">
