--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="header-text">
-						<h2>Hello, I'm <span></span> Mikayla!<br> I create experiences that click.🖱️‧₊˚ <span></span> </h2>
+						<h2>Hello, I'm <span></span> Mikayla!<br> I create experiences that click.🖱️‧₊˚ ⋅ <span></span> </h2>
 
 						<!-- <p>UX DESIGNER</p> -->
 						<!-- <p id="typewriter">UX DESIGNER</p> -->
