--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 										<div class="col-md-5">
 											<div class="experience-time text-right">
 												<h2>September 2024 - Present</h2>
-												<h3>Graduate UX Research Assistant</h3>
+												<h3>UX Research Assistant</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-offset-1 col-md-5">
@@ -357,11 +357,11 @@
 												<div class="timeline-content">
 													<h4 class="title">
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														SPARTIE Lab
+														SPARTIE VR Lab
 													</h4>
 													<h5>East Lansing, MI</h5>
 													<p class="description">
-														As a Graduate UX Research Assistant at SPARTIE Lab (The Social and Psychological Approaches to Research on Technology-Interaction Effects), I led the redesign of the lab's external website, focusing on improving accessibility, functionality, and the overall user experience. I conducted comprehensive user research, including user interviews and usability testing, to gather insights that informed design improvements. Additionally, I analyzed the website's backend to ensure compliance with accessibility standards and best practices, ensuring a more inclusive and efficient user experience.
+														As a UX Research Assistant at SPARTIE VR Lab (The Social and Psychological Approaches to Research on Technology-Interaction Effects), I led the redesign of the lab's external website, focusing on improving accessibility, functionality, and the overall user experience. I conducted comprehensive user research, including user interviews and usability testing, to gather insights that informed design improvements. Additionally, I analyzed the website's backend to ensure compliance with accessibility standards and best practices, ensuring a more inclusive and efficient user experience.
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
 										</div><!--/.col-->
