--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								Welcome to my digital sandbox!⛱️ I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a UX research assistant at Spartie Lab.
+								Welcome to my digital sandbox!⛱️ I'm a UX designer & researcher passionate about enhancing the human experience through thoughtful designs. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
 
 
 							</h3>
 							<p>
-								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my expertise in both user research and design. Set to graduate in May 2025, I also bring a diverse background in marketing design, graphic design, and game UI design. This blend of skills fuels my passion for crafting innovative, user-centered solutions. I'm eager to contribute to innovative teams focused on creating meaningful and impactful experiences that shape the future of technology. 
+								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my expertise in user research and design. With a graduation date set for May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
 							</p>
 
 						</div>
