--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>August 2024  - Present</h2>
-												<h3>UX Research Intern</h3>	
+												<h2>August 2023  - Present</h2>
+												<h3>UX & Graphic Design Intern</h3>	
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-offset-1 col-md-5">
@@ -292,11 +292,11 @@
 												<div class="timeline-content">
 													<h4 class="title">
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Lenovo
+														MSU Burgess Institute
 													</h4>
-													<h5>Remote</h5>
+													<h5>East Lansing, MI</h5>
 													<p class="description">
-														As a UX Research Intern at Lenovo, I conducted and analyzed user interviews, utilizing various tools to create highlight reels that uncovered key insights. I synthesized this data into actionable insights and presented my findings to align stakeholders and inform design decisions. Additionally, I organized research findings into visual frameworks to identify patterns and guide team strategies. I also conducted audits, presenting findings to leadership, addressing UX issues, and providing recommendations for improvement to enhance the user experience.
+														As a UX & Graphic Design Intern at the MSU Burgess Institute for Entrepreneurship and Innovation, I collaborated with student startups to address design needs through creative problem-solving and strategic consultation. I conducted user research and usability testing to inform design decisions, using insights to refine and improve solutions. I also developed and iterated on wireframes and prototypes to conceptualize user-centered designs. In addition, I supported students in implementing their designs, offering guidance on best practices and ensuring technical execution aligned with their goals.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -312,9 +312,73 @@
 											<div class="experience-time">
 												<h2>
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													June - August 2023
+													August 2024 - Present
 												</h2>
-												<h3>Web & Solutions Marketing Design Intern</h3>
+												<h3>UX Research Intern</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-5">
+											<div class="timeline">
+												<div class="timeline-content text-right">
+													<h4 class="title">
+														Lenovo
+													</h4>
+													<h5>Remote</h5>
+													<p class="description">
+														As a UX Research Intern at Lenovo, I conducted and analyzed user interviews, utilizing various tools to create highlight reels that uncovered key insights. I synthesized this data into actionable insights and presented my findings to align stakeholders and inform design decisions. Additionally, I organized research findings into visual frameworks to identify patterns and guide team strategies. I also conducted audits, presenting findings to leadership, addressing UX issues, and providing recommendations for improvement to the user experience.
+													</p>
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5 experience-time-main">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													August 2024 - Present
+												</h2>
+												<h3>UX Research Intern</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-5">
+											<div class="experience-time text-right">
+												<h2>August 2024 - Present</h2>
+												<h3>UX Research Assistant</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5">
+											<div class="timeline">
+												<div class="timeline-content">
+													<h4 class="title">
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														SPARTIE VR Lab
+													</h4>
+													<h5>East Lansing, MI</h5>
+													<p class="description">
+														As a UX Research Assistant at SPARTIE VR Lab (The Social and Psychological Approaches to Research on Technology-Interaction Effects), I led the redesign of the lab's external website, focusing on improving accessibility, functionality, and the overall user experience. I conducted comprehensive user research, including user interviews and usability testing, to gather insights that informed design improvements. Additionally, I analyzed the website's backend to ensure compliance with accessibility standards and best practices, ensuring a more inclusive and efficient user experience.
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													June - August 2024
+												</h2>
+												<h3>test</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-5">
@@ -348,8 +412,8 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>September 2024 - Present</h2>
-												<h3>UX Research Assistant</h3>
+												<h2>May - August 2023</h2>
+												<h3>UX Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-offset-1 col-md-5">
@@ -357,74 +421,10 @@
 												<div class="timeline-content">
 													<h4 class="title">
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														SPARTIE VR Lab
-													</h4>
-													<h5>East Lansing, MI</h5>
-													<p class="description">
-														As a UX Research Assistant at SPARTIE VR Lab (The Social and Psychological Approaches to Research on Technology-Interaction Effects), I led the redesign of the lab's external website, focusing on improving accessibility, functionality, and the overall user experience. I conducted comprehensive user research, including user interviews and usability testing, to gather insights that informed design improvements. Additionally, I analyzed the website's backend to ensure compliance with accessibility standards and best practices, ensuring a more inclusive and efficient user experience.
-												</div><!--/.timeline-content-->
-											</div><!--/.timeline-->
-										</div><!--/.col-->
-									</div>
-								</div><!--/.single-timeline-box-->
-							</li>
-	
-							<li>
-								<div class="single-timeline-box fix">
-									<div class="row">
-										<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-											<div class="experience-time">
-												<h2>
-													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													May - August 2023
-												</h2>
-												<h3>UX Design Intern</h3>
-											</div><!--/.experience-time-->
-										</div><!--/.col-->
-										<div class="col-md-5">
-											<div class="timeline">
-												<div class="timeline-content text-right">
-													<h4 class="title">
 														Avanade
-													</h4>
 													<h5>Chicago, IL</h5>
 													<p class="description">
 														As a UX Design Intern at Avanade, I collaborated within a cross-functional team to design digital experiences that enhanced user engagement for Avanade clients. I employed a range of user research methods, including interviews and usability testing, to gather insights that informed key design decisions. Additionally, I designed intuitive wireframes and developed interactive prototypes, ensuring that the final products aligned with both business goals and user needs, contributing to a seamless and engaging user experience.
-													</p>
-												</div><!--/.timeline-content-->
-											</div><!--/.timeline-->
-										</div><!--/.col-->
-										<div class="col-md-offset-1 col-md-5 experience-time-main">
-											<div class="experience-time">
-												<h2>
-													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													May - August 2023
-												</h2>
-												<h3>UX Design Intern</h3>
-											</div><!--/.experience-time-->
-										</div><!--/.col-->
-									</div>
-								</div><!--/.single-timeline-box-->
-							</li>
-	
-							<li>
-								<div class="single-timeline-box fix">
-									<div class="row">
-										<div class="col-md-5">
-											<div class="experience-time text-right">
-												<h2>September 2023 - Present</h2>
-												<h3>UX & Graphic Design Intern</h3>
-											</div><!--/.experience-time-->
-										</div><!--/.col-->
-										<div class="col-md-offset-1 col-md-5">
-											<div class="timeline">
-												<div class="timeline-content">
-													<h4 class="title">
-														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														MSU Burgess Institute for Entrepreneurship & Innovation
-													<h5>East Lansing, MI</h5>
-													<p class="description">
-														As a UX & Graphic Design Intern at the MSU Burgess Institute for Entrepreneurship and Innovation, I collaborated with student startups to address design needs through creative problem-solving and strategic consultation. I conducted user research and usability testing to inform design decisions, using insights to refine and improve solutions. I also developed and iterated on wireframes and prototypes to conceptualize user-centered designs. In addition, I supported students in implementing their designs, offering guidance on best practices and ensuring technical execution aligned with their goals.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
