--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
 												<div class="timeline-content">
 													<h4 class="title">
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														MSU Burgess Institute
+														MSU Burgess Institute for Entrepreneurship & Innovation
 													</h4>
-													<h5>East Lansing, MI</h5>
+													<h5>📍East Lansing, MI</h5>
 													<p class="description">
 														As a UX & Graphic Design Intern at the MSU Burgess Institute for Entrepreneurship and Innovation, I collaborated with student startups to address design needs through creative problem-solving and strategic consultation. I conducted user research and usability testing to inform design decisions, using insights to refine and improve solutions. I also developed and iterated on wireframes and prototypes to conceptualize user-centered designs. In addition, I supported students in implementing their designs, offering guidance on best practices and ensuring technical execution aligned with their goals.
 													</p>
@@ -323,7 +323,7 @@
 													<h4 class="title">
 														Lenovo
 													</h4>
-													<h5>Remote</h5>
+													<h5>📍Remote</h5>
 													<p class="description">
 														As a UX Research Intern at Lenovo, I conducted and analyzed user interviews, utilizing various tools to create highlight reels that uncovered key insights. I synthesized this data into actionable insights and presented my findings to align stakeholders and inform design decisions. Additionally, I organized research findings into visual frameworks to identify patterns and guide team strategies. I also conducted audits, presenting findings to leadership, addressing UX issues, and providing recommendations for improvement to the user experience.
 													</p>
@@ -359,7 +359,7 @@
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														SPARTIE VR Lab
 													</h4>
-													<h5>East Lansing, MI</h5>
+													<h5>📍East Lansing, MI</h5>
 													<p class="description">
 														As a UX Research Assistant at SPARTIE VR Lab (The Social and Psychological Approaches to Research on Technology-Interaction Effects), I led the redesign of the lab's external website, focusing on improving accessibility, functionality, and the overall user experience. I conducted comprehensive user research, including user interviews and usability testing, to gather insights that informed design improvements. Additionally, I analyzed the website's backend to ensure compliance with accessibility standards and best practices, ensuring a more inclusive and efficient user experience.
 												</div><!--/.timeline-content-->
@@ -387,7 +387,7 @@
 													<h4 class="title">
 														Lenovo
 													</h4>
-													<h5>Morrisville, NC</h5>
+													<h5>📍Morrisville, NC</h5>
 													<p class="description">
 														As a Web & Solutions Marketing Design Intern at Lenovo, I designed customer-facing assets, including infographics and presentations, ensuring they adhered to branding standards. I conducted audits of high-profile web pages and assets to assess their accuracy, branding consistency, and functionality, providing recommendations for updates. Additionally, I redesigned an external company website to better align with corporate guidelines and enhance the overall user experience.
 													</p>
@@ -422,7 +422,7 @@
 													<h4 class="title">
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														Avanade
-													<h5>Chicago, IL</h5>
+													<h5>📍Chicago, IL</h5>
 													<p class="description">
 														As a UX Design Intern at Avanade, I collaborated within a cross-functional team to design digital experiences that enhanced user engagement for Avanade clients. I employed a range of user research methods, including interviews and usability testing, to gather insights that informed key design decisions. Additionally, I designed intuitive wireframes and developed interactive prototypes, ensuring that the final products aligned with both business goals and user needs, contributing to a seamless and engaging user experience.
 													</p>
@@ -464,7 +464,7 @@
 									<h4 class="title">
 										Michigan State University
 									</h4>
-									<h5>East Lansing, MI</h5>
+									<h5>📍East Lansing, MI</h5>
 									<p class="description">
 										Throughout this program, I'll be immersed in courses focusing on user experience research, honing my skills in understanding user behaviors and preferences to create meaningful digital experiences.
 									</p>
@@ -488,7 +488,7 @@
 									<h4 class="title">
 										Michigan State University
 									</h4>
-									<h5>East Lansing, MI</h5>
+									<h5>📍East Lansing, MI</h5>
 									<p class="description">
 										Specializing in Human-Centered Technologies, I complemented my degree with minors in Graphic Design and Business. This combination equipped me with a holistic understanding of user-centric design principles.
 									</p>
@@ -513,7 +513,7 @@
 									<h4 class="title">
 										Google
 									</h4>
-									<h5>Remote</h5>
+									<h5>📍Remote</h5>
 									<p class="description">
 									Throughout seven courses, I participated in interactive lessons, practical exercises, and real-world projects to develop a deep understanding of UX principles and methodologies. 
 									</p>
