Co-authored-by: Aman Dhruva Thamminana <amantham20@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -211,62 +211,59 @@
 
 <!--portfolio start -->
 <section id="portfolio" class="portfolio">
-	<div class="portfolio-details">
-		<div class="section-heading text-center">
-			<h2>portfolio under construction👷‍♀️</h2>
-		</div>  
-		<div class="container">
-			<div class="portfolio-content">
-				<div class="isotope">
-					<div class="row">
+    <div class="portfolio-details">
+        <div class="section-heading text-center">
+            <h2>Portfolio under construction 👷‍♀️</h2>
+        </div>
+        <div class="container">
+            <div class="portfolio-content">
+                <div class="isotope">
+                    <div class="row">
 
-						<div class="col-sm-6">
-							<div class="item">
-								<img src="assets/images/portfolio/portphoto1.png" alt="portfolio image" />
-								<div class="isotope-overlay">
-									<a href="#">
-										Coming Soon
-									</a>
-								</div><!-- /.isotope-overlay -->
-							</div><!-- /.item -->
-							<div class="item">
-								<img src="assets/images/portfolio/portphoto2.png" alt="portfolio image" />
-								<div class="isotope-overlay">
-									<a href="#">
-										Coming Soon
-									</a>
-								</div><!-- /.isotope-overlay -->
-							</div><!-- /.item -->
-						</div><!-- /.col -->
+                        <div class="col-sm-6">
+                            <div class="item">
+                                <img src="assets/images/portfolio/portphoto1.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-1.html">
+                                        Case Study 1
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                            <div class="item">
+                                <img src="assets/images/portfolio/portphoto2.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-2.html">
+                                        Case Study 3
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                        </div><!-- /.col -->
 
-						<div class="col-sm-6">
-							<div class="item">
-								<img src="assets/images/portfolio/portphoto3.png" alt="portfolio image" />
-								<div class="isotope-overlay">
-									<a href="#">
-										Coming Soon
-									</a>
-								</div><!-- /.isotope-overlay -->
-							</div><!-- /.item -->
-							<div class="item">
-								<img src="assets/images/portfolio/portpohoto4.png" alt="portfolio image" />
-								<div class="isotope-overlay">
-									<a href="#">
-										Coming Soon
-									</a>
-								</div><!-- /.isotope-overlay -->
-							</div><!-- /.item -->
-						</div><!-- /.col -->
-					</div><!-- /.row -->
-				</div><!--/.isotope-->
-			</div><!--/.gallery-content-->
-		</div><!--/.container-->
-	</div><!--/.portfolio-details-->
-
-</section><!--/.portfolio-->
+                        <div class="col-sm-6">
+                            <div class="item">
+                                <img src="assets/images/portfolio/portphoto3.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-3.html">
+                                        Case Study 2
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                            <div class="item">
+                                <img src="assets/images/portfolio/portpohoto4.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-4.html">
+                                        Case Study 4
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                        </div><!-- /.col -->
+                    </div><!-- /.row -->
+                </div><!--/.isotope-->
+            </div><!--/.gallery-content-->
+        </div><!--/.container-->
+    </div><!--/.portfolio-details-->
+</section>
 <!--portfolio end -->
-
-
 
 
 		<!--experience start -->
