--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 							<li class=" smooth-menu active"></li>
 							<li class="smooth-menu"><a href="#about">about</a></li>
-							<li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
+							<li class="smooth-menu"><a href="#work">work</a></li>
 							<li class="smooth-menu"><a href="#experience">experience</a></li>
 							<li class=" smooth-menu"><a href="#education">education</a></li>
 							<li class="smooth-menu"><a href="#contact">contact</a></li>
@@ -210,10 +210,10 @@
 	<!--about end -->
 
 <!--portfolio start -->
-<section id="portfolio" class="portfolio">
+<section id="work" class="work">
     <div class="portfolio-details">
         <div class="section-heading text-center">
-            <h2>Portfolio under construction 👷‍♀️</h2>
+            <h2>Section under construction 👷‍♀️</h2>
         </div>
         <div class="container">
             <div class="portfolio-content">
@@ -222,7 +222,7 @@
 
                         <div class="col-sm-6">
                             <div class="item">
-                                <img src="assets/images/portfolio/portphoto1.png" alt="portfolio image" />
+                                <img src="assets/images/portfolio/portpohoto4.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-1.html">
                                         Case Study 1
@@ -249,7 +249,7 @@
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
                             <div class="item">
-                                <img src="assets/images/portfolio/portpohoto4.png" alt="portfolio image" />
+                                <img src="assets/images/portfolio/portphoto1.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-4.html">
                                         Case Study 4
