--- a/case-study-1.html
+++ b/case-study-1.html
@@ -2,155 +2,116 @@
 <html class="no-js" lang="en">
 
 <head>
-	<!-- meta data -->
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <!-- meta data -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<!--foont-family-->
-	<link
-		href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext"
-		rel="stylesheet">
+    <!--font-family-->
+    <link
+        href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext"
+        rel="stylesheet">
 
-	<!-- title of site -->
-	<title>Mikayla's Portfolio</title>
+    <!-- title of site -->
+    <title>Case Study 1</title>
 
-	<!-- For favicon png -->
-	<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
+    <!-- For favicon png -->
+    <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
 
-	<!--font-awesome.min.css-->
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <!--font-awesome.min.css-->
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-	<!--flat icon css-->
-	<link rel="stylesheet" href="assets/css/flaticon.css">
+    <!--flat icon css-->
+    <link rel="stylesheet" href="assets/css/flaticon.css">
 
-	<!--animate.css-->
-	<link rel="stylesheet" href="assets/css/animate.css">
+    <!--animate.css-->
+    <link rel="stylesheet" href="assets/css/animate.css">
 
-	<!--owl.carousel.css-->
-	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <!--owl.carousel.css-->
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 
-	<!--bootstrap.min.css-->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!--bootstrap.min.css-->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
-	<!-- bootsnav -->
-	<link rel="stylesheet" href="assets/css/bootsnav.css">
+    <!-- bootsnav -->
+    <link rel="stylesheet" href="assets/css/bootsnav.css">
 
-	<!--style.css-->
-	<link rel="stylesheet" href="assets/css/style.css">
+    <!--style.css-->
+    <link rel="stylesheet" href="assets/css/style.css">
 
-	<!--responsi ve.css-->
-	<link rel="stylesheet" href="assets/css/responsive.css">
+    <!--responsive.css-->
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
-	<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+    <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
-<body>
-	<!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+<body class="case-study">
 
-	<!-- top-area Start -->
-	<header class="top-area">
-		<div class="header-area">
-			<!-- Start Navigation -->
-			<nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
+    <!-- top-area Start -->
+    <header class="top-area">
+        <div class="header-area">
+            <!-- Start Navigation -->
+            <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
 
-				<div class="container">
+                <div class="container">
 
-					<!-- Start Header Navigation -->
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-							<i class="fa fa-bars"></i>
-						</button>
-						<a class="navbar-brand" href="index.html">Mikayla Slavin</a>
-					</div><!--/.navbar-header-->
-					<!-- End Header Navigation -->
+                    <!-- Start Header Navigation -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                            <i class="fa fa-bars"></i>
+                        </button>
+                        <a class="navbar-brand" href="index.html">Mikayla Slavin</a>
+                    </div><!--/.navbar-header-->
+                    <!-- End Header Navigation -->
 
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
-						<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-							<li class=" smooth-menu active"></li>
-							<li class="smooth-menu"><a href="index.html#about">about</a></li>
-							<li class="smooth-menu"><a href="index.html#portfolio">portfolio</a></li>
-							<li class="smooth-menu"><a href="index.html#experience">experience</a></li>
-							<li class=" smooth-menu"><a href="index.html#education">education</a></li>
-							<li class="smooth-menu"><a href="index.html#contact">contact</a></li>
-						</ul><!--/.nav -->
-					</div><!-- /.navbar-collapse -->
-				</div><!--/.container-->
-			</nav><!--/nav-->
-			<!-- End Navigation -->
-		</div><!--/.header-area-->
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
+                        <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+                            <li class=" smooth-menu active"></li>
+                            <li class="smooth-menu"><a href="index.html#about">about</a></li>
+                            <li class="smooth-menu"><a href="index.html#work">work</a></li>
+                            <li class="smooth-menu"><a href="index.html#experience">experience</a></li>
+                            <li class=" smooth-menu"><a href="index.html#education">education</a></li>
+                            <li class="smooth-menu"><a href="index.html#contact">contact</a></li>
+                        </ul><!--/.nav -->
+                    </div><!-- /.navbar-collapse -->
+                </div><!--/.container-->
+            </nav><!--/nav-->
+            <!-- End Navigation -->
+        </div><!--/.header-area-->
 
-		<div class="clearfix"></div>
+        <div class="clearfix"></div>
 
-	</header><!-- /.top-area-->
-	<!-- top-area End -->
+    </header><!-- /.top-area-->
+    <!-- top-area End -->
 
-	<!--welcome-hero start -->
-	<section id="welcome-hero" class="welcome-hero">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<div class="header-text">
-						<h2>Case Study <span></span> #1!<br> <span></span> </h2>
+    <!-- Case Study Hero Section -->
+    <section id="casestudy1-hero" class="casestudy1-hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="header-text">
+                        <h2 class="case-study-title">Case Study</h2>
+                        <p>A UX Case Study</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-						<!-- <p>UX DESIGNER</p> -->
-						<!-- <p id="typewriter">UX DESIGNER</p> -->
-						<div id="typewriter"></div>
-						<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-						<script>
-							// Your JavaScript code using Typewriter
-							const app = document.getElementById('typewriter');
-							const typewriter = new Typewriter(app, {
-								loop: true
-							});
 
-							typewriter
-								.typeString('UX Designer')
-								.pauseFor(40)
-								.pauseFor(40)
-								.deleteChars(8)
-								.typeString('Researcher')
-								.pauseFor(40)
-								.deleteAll()
-								.pauseFor(40)
-								.deleteChars(7)
-								.typeString('Web Designer')
-								.pauseFor(40)
-								.pauseFor(40)
-								.deleteChars(12)
-								.typeString('Graphic Designer')
-								.pauseFor(40)
-								.pauseFor(40)
-								.deleteChars(17)
-								.typeString('Game UI Designer')
-								.start();
-						</script>
-						<br>
-
-						<a href="assets/download/Mikayla Slavin's Resume.pdf" download id="download-button">Download Resume</a>
-					</div><!--/.header-text-->
-				</div><!--/.col-->
-			</div><!-- /.row-->
-		</div><!-- /.container-->
-
-	</section><!--/.welcome-hero-->
-	<!--welcome-hero end -->
-
-	<!--about start -->
+   <!--about start -->
 	<section id="about" class="about">
 		<div class="section-heading text-center">
-			<h2>about me🍓</h2>
+			<h2>Project Overview</h2>
 		</div>
 		<div class="container">
 			<div class="about-content">
@@ -207,164 +168,61 @@
 	</section><!--/.about-->
 	<!--about end -->
 
-	<!--contact start -->
-	<section id="contact" class="contact">
-		<div class="section-heading text-center">
-			<h2>contact me☎️</h2>
-		</div>
-		<div class="container">
-			<div class="contact-content">
-				<div class="row">
-					<div class="col-md-offset-1 col-md-5 col-sm-6">
-						<div class="single-contact-box">
-							<div class="contact-form">
-								<form action="https://formspree.io/f/mkndjajv" method="POST">
-									<div class="row">
-										<div class="col-sm-6 col-xs-12">
-											<div class="form-group">
-												<input type="text" class="form-control" id="name" placeholder="Name*"
-													name="name">
-											</div><!--/.form-group-->
-										</div><!--/.col-->
-										<div class="col-sm-6 col-xs-12">
-											<div class="form-group">
-												<input type="email" class="form-control" id="email" placeholder="Email*"
-													name="email">
-											</div><!--/.form-group-->
-										</div><!--/.col-->
-									</div><!--/.row-->
-									<div class="row">
-										<div class="col-sm-12">
-											<div class="form-group">
-												<input type="text" class="form-control" id="subject"
-													placeholder="Subject" name="subject">
-											</div><!--/.form-group-->
-										</div><!--/.col-->
-									</div><!--/.row-->
-									<div class="row">
-										<div class="col-sm-12">
-											<div class="form-group">
-												<textarea class="form-control" rows="8" id="comment"
-													placeholder="Message"></textarea>
-											</div><!--/.form-group-->
-										</div><!--/.col-->
-									</div><!--/.row-->
+    <!--footer-copyright start-->
+    <footer id="footer-copyright" class="footer-copyright">
+        <div class="container">
+            <div class="hm-footer-copyright text-center">
+                <p>
+                    &copy; copyright Mikayla Slavin. <a href="https://www.themesine.com/"></a>
+                </p><!--/p-->
+            </div><!--/.text-center-->
+        </div><!--/.container-->
+
+        <div id="scroll-Top">
+            <div class="return-to-top">
+                <i class="fa fa-angle-up " id="scroll-top"></i>
+            </div>
+
+        </div><!--/.scroll-Top-->
+
+    </footer><!--/.footer-copyright-->
+    <!--footer-copyright end-->
+
+    <!-- Include all js compiled plugins (below), or include individual files as needed -->
+
+    <script src="assets/js/jquery.js"></script>
+
+    <!--modernizr.min.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
+    <!--bootstrap.min.js-->
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    <!-- bootsnav js -->
+    <script src="assets/js/bootsnav.js"></script>
+
+    <!-- jquery.sticky.js -->
+    <script src="assets/js/jquery.sticky.js"></script>
+
+    <!-- for progress bar start-->
+
+    <!-- progressbar js -->
+    <script src="assets/js/progressbar.js"></script>
+
+    <!-- appear js -->
+    <script src="assets/js/jquery.appear.js"></script>
+
+    <!-- for progress bar end -->
+
+    <!--owl.carousel.js-->
+    <script src="assets/js/owl.carousel.min.js"></script>
 
 
-									<div class="row">
-										<div class="col-sm-12">
-											<button class="single-contact-btn col-sm-12">
-												Submit
-											</button>
-										</div>
-										<!-- <div class="col-sm-12">
-												<div class="single-contact-btn contact-btn">
-													<a href="#" class="contact-btn" role="button">
-														Submit
-														<button type="submit">Submit</button>
-													</a> -->
-										<!-- </div>/.single-single-contact-btn -->
-										<!-- </div>/.col -->
-									</div>
-								</form><!--/form-->
-							</div><!--/.contact-form-->
-						</div><!--/.single-contact-box-->
-					</div><!--/.col-->
-					<div class="col-md-offset-1 col-md-5 col-sm-6">
-						<div class="single-contact-box">
-							<div class="contact-adress">
-								<div class="contact-add-head">
-									<h3>Mikayla Slavin🍓</h3>
-									<p>UX Designer & Researcher</p>
-								</div>
-								<div class="contact-add-info">
-									<div class="single-contact-add-info">
-										<h3>phone</h3>
-										<p>(906) 204-6226</p>
-									</div>
-									<div class="single-contact-add-info">
-										<h3>email</h3>
-										<p>mikaylaslavin4@gmail.com</p>
-									</div>
-									<div class="single-contact-add-info">
-										<h3>LinkedIn</h3>
-										<p>www.linkedin.com/in/mikaylaslavin</p>
-									</div>
-								</div>
-							</div><!--/.contact-adress-->
-							<div class="hm-foot-icon">
-								<ul>
-									<li><a href="mailto: mikaylaslavin4@gmail.com"><i class="fa fa-envelope"></i></a></li><!--/li-->
-									<li><a href="tel:+19062046226"><i class="fa fa-phone"></i></a></li><!--/li-->
-									<li><a href="https://www.linkedin.com/in/mikaylaslavin/"><i class="fa fa-linkedin"></i></a></li><!--/li-->
-									<li><a href="https://github.com/mikaylaslavin"><i class="fa fa-github"></i></a></li><!--/li-->
-								</ul><!--/ul-->
-
-							</div><!--/.hm-foot-icon-->
-						</div><!--/.single-contact-box-->
-					</div><!--/.col-->
-				</div><!--/.row-->
-			</div><!--/.contact-content-->
-		</div><!--/.container-->
-
-	</section><!--/.contact-->
-	<!--contact end -->
-
-	<!--footer-copyright start-->
-	<footer id="footer-copyright" class="footer-copyright">
-		<div class="container">
-			<div class="hm-footer-copyright text-center">
-				<p>
-					&copy; copyright Mikayla Slavin. <a href="https://www.themesine.com/"></a>
-				</p><!--/p-->
-			</div><!--/.text-center-->
-		</div><!--/.container-->
-
-		<div id="scroll-Top">
-			<div class="return-to-top">
-				<i class="fa fa-angle-up " id="scroll-top"></i>
-			</div>
-
-		</div><!--/.scroll-Top-->
-
-	</footer><!--/.footer-copyright-->
-	<!--footer-copyright end-->
-
-	<!-- Include all js compiled plugins (below), or include individual files as needed -->
-
-	<script src="assets/js/jquery.js"></script>
-
-	<!--modernizr.min.js-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
-	<!--bootstrap.min.js-->
-	<script src="assets/js/bootstrap.min.js"></script>
-
-	<!-- bootsnav js -->
-	<script src="assets/js/bootsnav.js"></script>
-
-	<!-- jquery.sticky.js -->
-	<script src="assets/js/jquery.sticky.js"></script>
-
-	<!-- for progress bar start-->
-
-	<!-- progressbar js -->
-	<script src="assets/js/progressbar.js"></script>
-
-	<!-- appear js -->
-	<script src="assets/js/jquery.appear.js"></script>
-
-	<!-- for progress bar end -->
-
-	<!--owl.carousel.js-->
-	<script src="assets/js/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
-
-	<!--Custom JS-->
-	<script src="assets/js/custom.js"></script>
+    <!--Custom JS-->
+    <script src="assets/js/custom.js"></script>
 
 </body>
 
