--- a/case-study-1.html
+++ b/case-study-1.html
@@ -99,8 +99,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="header-text">
-                        <h2 class="case-study-title">Case Study</h2>
-                        <p>A UX Case Study</p>
+                        <h2>Lenovo Storage<span></span> Central <br> Website Redesign <span></span> </h2>
+                        <p>By Mikayla Slavin</p>
                     </div>
                 </div>
             </div>
