--- a/case-study-3.html
+++ b/case-study-3.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="header-text">
-                        <h2>Lenovo Storage<span></span> Central <br> Website Redesign <span></span> </h2>
+                        <h2>The Painter's<span></span> Lament <br> Game UI Design <span></span> </h2>
                         <p>By Mikayla Slavin</p>
                     </div>
                 </div>
