--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <img src="assets/images/portfolio/Lenovo2.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-1.html">
-                                        Case Study 1
+                                        Lenovo Storage<span></span> Central <br> Website Redesign <span></span> 
                                     </a>
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
@@ -233,7 +233,7 @@
                                 <img src="assets/images/portfolio/CC2.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-2.html">
-                                        Case Study 3
+                                        Campus<span></span> Cravings <br> App Design <span></span> 
                                     </a>
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
@@ -244,7 +244,7 @@
                                 <img src="assets/images/portfolio/TPL.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-3.html">
-                                        Case Study 2
+                                        The Painter's<span></span> Lament <br> Game UI Design <span></span> 
                                     </a>
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
@@ -252,7 +252,7 @@
                                 <img src="assets/images/portfolio/MSUAIGA.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-4.html">
-                                        Case Study 4
+                                      MSU <span></span> AIGA <br> Website Redesign <span></span> </h2>
                                     </a>
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
