--- a/case-study-1.html
+++ b/case-study-1.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <!-- title of site -->
-    <title>Case Study 1</title>
+    <title>Lenovo Storage Central Website Redesign</title>
 
     <!-- For favicon png -->
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
@@ -158,34 +158,6 @@
 					<div class="col-sm-offset-1 col-sm-5">
 						<div class="single-about-img">
 							<img src="assets/images/about/headshot.jpg" alt="Mikayla's Headshot Photo">
-							<div class="about-list-icon">
-								<ul>
-									<li>
-										<a href="mailto: mikaylaslavin4@gmail.com">
-											<i class="fa fa-envelope" aria-hidden="true" style="margin-left: 5px;"></i>
-										</a>
-
-									</li><!-- / li -->
-									<li>
-										<a href="tel:+19062046226">
-											<i class="fa fa-phone" aria-hidden="true"></i>
-										</a>
-
-									</li><!-- / li -->
-									<li>
-										<a href="https://www.linkedin.com/in/mikaylaslavin/">
-											<i class="fa fa-linkedin" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
-									<li>
-										<a href="https://github.com/mikaylaslavin">
-											<i class="fa fa-github" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
-
-
-								</ul><!-- / ul -->
-							</div><!-- /.about-list-icon -->
 
 						</div>
 
