--- a/case-study-1.html
+++ b/case-study-1.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <div class="header-text">
+                    <div class="header-text1">
                         <h2>Lenovo Storage<span></span> Central <br> Website Redesign <span></span> </h2>
 
                         
@@ -127,6 +127,11 @@
 						</script>
 						<br>
 
+                        <a href="assets/download/Mikayla Slavin's Resume.pdf" download id="casestudy1-button">Download Presentation</a>
+					</div><!--/.header-text-->
+				</div><!--/.col-->
+			</div><!-- /.row-->
+		</div><!-- /.container-->
                     </div>
                 </div>
             </div>
