--- a/case-study-1.html
+++ b/case-study-1.html
@@ -127,7 +127,7 @@
 						</script>
 						<br>
 
-                        <a href="assets/download/Mikayla Slavin's Resume.pdf" download id="casestudy1-button">Download Presentation</a>
+                        <a href="assets/download/Lenovo Storage Central Redesign.pdf" download id="casestudy1-button">Download Presentation</a>
 					</div><!--/.header-text-->
 				</div><!--/.col-->
 			</div><!-- /.row-->
@@ -137,8 +137,6 @@
             </div>
         </div>
     </section>
-
-   
 
 
    <!--about start -->
