--- a/case-study-2.html
+++ b/case-study-2.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <div class="header-text">
+                    <div class="header-text2">
                         <h2>Campus<span></span> Cravings <br> App Design <span></span> </h2>
                                 <!-- <p>UX DESIGNER</p> -->
 						<!-- <p id="typewriter">UX DESIGNER</p> -->
@@ -124,6 +124,12 @@
 								.start();
 						</script>
 						<br>
+                       
+                        <a href="assets/download/Lenovo Storage Central Redesign.pdf" download id="casestudy1-button">Download Presentation</a>
+					</div><!--/.header-text-->
+				</div><!--/.col-->
+			</div><!-- /.row-->
+		</div><!-- /.container-->
                     </div>
                 </div>
             </div>
