--- a/case-study-3.html
+++ b/case-study-3.html
@@ -125,6 +125,11 @@
 								.start();
 						</script>
 						<br>
+                        <a href="assets/download/Lenovo Storage Central Redesign.pdf" download id="casestudy1-button">Download Presentation</a>
+					</div><!--/.header-text-->
+				</div><!--/.col-->
+			</div><!-- /.row-->
+		</div><!-- /.container-->
                     </div>
                 </div>
             </div>
