--- a/case-study-2.html
+++ b/case-study-2.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <!-- title of site -->
-    <title>Case Study 1</title>
+    <title>Campus Cravings App Design</title>
 
     <!-- For favicon png -->
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
@@ -125,7 +125,7 @@
 						</script>
 						<br>
                        
-                        <a href="assets/download/Lenovo Storage Central Redesign.pdf" download id="casestudy1-button">Download Presentation</a>
+                        <a href="assets/download/Campus Cravings Prototype.pdf" download id="casestudy1-button">Download Presentation</a>
 					</div><!--/.header-text-->
 				</div><!--/.col-->
 			</div><!-- /.row-->
