--- a/case-study-3.html
+++ b/case-study-3.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <div class="header-text">
+                    <div class="header-text3">
                         <h2>The Painter's<span></span> Lament <br> Game UI Design <span></span> </h2>
                        
                                 <!-- <p>UX DESIGNER</p> -->
@@ -125,7 +125,7 @@
 								.start();
 						</script>
 						<br>
-                        <a href="assets/download/Lenovo Storage Central Redesign.pdf" download id="casestudy1-button">Download Presentation</a>
+                        <a href="assets/download/The Painter's Lament Overview.pdf" download id="casestudy1-button">Download Presentation</a>
 					</div><!--/.header-text-->
 				</div><!--/.col-->
 			</div><!-- /.row-->
