--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 							<li class=" smooth-menu active"></li>
 							<li class="smooth-menu"><a href="#about">about</a></li>
 							<li class="smooth-menu"><a href="#work">work</a></li>
+							<li class="smooth-menu"><a href="#play">play</a></li>
 							<li class="smooth-menu"><a href="#experience">experience</a></li>
 							<li class=" smooth-menu"><a href="#education">education</a></li>
 							<li class="smooth-menu"><a href="#contact">contact</a></li>
@@ -213,7 +214,7 @@
 <section id="work" class="work">
     <div class="portfolio-details">
         <div class="section-heading text-center">
-            <h2>Section under construction 👷‍♀️</h2>
+            <h2>Work </h2>
         </div>
         <div class="container">
             <div class="portfolio-content">
@@ -264,6 +265,60 @@
     </div><!--/.portfolio-details-->
 </section>
 <!--portfolio end -->
+
+<section id="play" class="play">
+    <div class="portfolio-details">
+        <div class="section-heading text-center">
+            <h2>Play </h2>
+        </div>
+        <div class="container">
+            <div class="portfolio-content">
+                <div class="isotope">
+                    <div class="row">
+
+                        <div class="col-sm-6">
+                            <div class="item">
+                                <img src="assets/images/portfolio/Lenovo2.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-1.html">
+                                        <span></span> Travel <br> <span></span> 
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                            <div class="item">
+                                <img src="assets/images/portfolio/CC2.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-2.html">
+                                        <span></span> Art <br> <span></span> 
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                        </div><!-- /.col -->
+
+                        <div class="col-sm-6">
+                            <div class="item">
+                                <img src="assets/images/portfolio/TPL.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-3.html">
+                                        <span></span> Food <br>  <span></span> 
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                            <div class="item">
+                                <img src="assets/images/portfolio/MSUAIGA.png" alt="portfolio image" />
+                                <div class="isotope-overlay">
+                                    <a href="case-study-4.html">
+                                       <span></span> Volunteering <br>  <span></span> </h2>
+                                    </a>
+                                </div><!-- /.isotope-overlay -->
+                            </div><!-- /.item -->
+                        </div><!-- /.col -->
+                    </div><!-- /.row -->
+                </div><!--/.isotope-->
+            </div><!--/.gallery-content-->
+        </div><!--/.container-->
+    </div><!--/.portfolio-details-->
+</section>
 
 
 		<!--experience start -->
