--- a/case-study-2.html
+++ b/case-study-2.html
@@ -78,6 +78,7 @@
                             <li class=" smooth-menu active"></li>
                             <li class="smooth-menu"><a href="index.html#about">about</a></li>
                             <li class="smooth-menu"><a href="index.html#work">work</a></li>
+                            <li class="smooth-menu"><a href="#play">play</a></li>
                             <li class="smooth-menu"><a href="index.html#experience">experience</a></li>
                             <li class=" smooth-menu"><a href="index.html#education">education</a></li>
                             <li class="smooth-menu"><a href="index.html#contact">contact</a></li>
