--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
                         <div class="col-sm-6">
                             <div class="item">
-                                <img src="assets/images/portfolio/Lenovo2.png" alt="portfolio image" />
+                                <img src="assets/images/about/Travel.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-1.html">
                                         <span></span> Travel <br> <span></span> 
@@ -286,7 +286,7 @@
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
                             <div class="item">
-                                <img src="assets/images/portfolio/CC2.png" alt="portfolio image" />
+                                <img src="assets/images/about/Art.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-2.html">
                                         <span></span> Art <br> <span></span> 
@@ -297,7 +297,7 @@
 
                         <div class="col-sm-6">
                             <div class="item">
-                                <img src="assets/images/portfolio/TPL.png" alt="portfolio image" />
+                                <img src="assets/images/about/Food.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-3.html">
                                         <span></span> Food <br>  <span></span> 
@@ -305,7 +305,7 @@
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
                             <div class="item">
-                                <img src="assets/images/portfolio/MSUAIGA.png" alt="portfolio image" />
+                                <img src="assets/images/about/Volunteering.png" alt="portfolio image" />
                                 <div class="isotope-overlay">
                                     <a href="case-study-4.html">
                                        <span></span> Volunteering <br>  <span></span> </h2>
